Fixed too long tags issue.

--- a/axelor-web/src/main/webapp/css/view.form.css
+++ b/axelor-web/src/main/webapp/css/view.form.css
@@ -854,6 +854,11 @@ table.field-details .help-text hr {
 .tag-select .tag-link,
 .tag-select-single .tag-link {
 	cursor: pointer;
+	display: inline-block;
+	max-width: 140px;
+	height: 11px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .tag-select .tag-link:hover,
